fix row and column gaps for model block. to be tested again

--- a/css/style.css
+++ b/css/style.css
@@ -3469,8 +3469,8 @@ div[data-icon] {
         display: grid;
         grid-template-columns: repeat(4, minmax(0, 1fr));
         grid-auto-rows: min-content;
-        column-gap: 10px;
-        row-gap: 30px;
+        /*column-gap: 22px;*/
+        /*row-gap: 50px;*/
     }
 
     .model-title__container,
@@ -3855,10 +3855,10 @@ div[data-icon] {
         width: 32px;
         height: 32px;
     }
-    .models-block__titles {
-        column-gap: 30px;
-        row-gap: 50px;
-    }
+    /*.models-block__titles {*/
+    /*    column-gap: 22px;*/
+    /*    row-gap: 50px;*/
+    /*}*/
     .model-title__videos {
         padding: 0 22px;
     }
